# dev

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.kimi/skills/marketplace-loader/: SKILL.md
.kimi/skills/maroon-dev/: SKILL.md
backend/: package.json
deployment/: deploy.sh  nginx.conf  torrent-player.service
frontend/: app.js  index.html  style.css  sw.js
marketplace/: __init__.py
marketplace/cli/: __init__.py  main.py
marketplace/core/: __init__.py  analyzer.py  discovery.py  full_orchestrator.py  matcher.py  models.py  orchestrator.py
marketplace/harnesses/: __init__.py
player/backend/: package-lock.json  server.js
player/frontend/: index.html  manifest.json  style.css
plugins/ui-ux-pro-max/.claude-plugin/: plugin.json
scripts/: kimi-auto-load.py  kimi-full-orchestrate.py
tests/: test_analyzer.py  test_discovery.py  test_full_orchestrator.py  test_orchestrator.py
